--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="environment.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 
+		<script type="text/javascript" src="breakout/header.js"></script>
 		<script type="text/javascript" src="breakout/paddle.js"></script>
 		<script type="text/javascript" src="breakout/breakout.js"></script>
 		
