properly set canvas size

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="main.js"></script>
 	</head>
 	<body>
-		<canvas id="canvas" style="height: 400px; width: 400px; border: 1px solid black">
+		<canvas id="canvas" width="800" height="800" style="border: 1px solid black">
 			Your browser doesn't support canvas.
 		</canvas>
 	</body>
