--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script type="text/javascript" src="core.js"></script>
 		<script type="text/javascript" src="device.js"></script>
 		<script type="text/javascript" src="environment.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 
 		<script type="text/javascript" src="breakout/header.js"></script>
 		<script type="text/javascript" src="breakout/paddle.js"></script>
+		<script type="text/javascript" src="breakout/ball.js"></script>
 		<script type="text/javascript" src="breakout/breakout.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
