basic collision detection and brick deletion.

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 		<script type="text/javascript" src="environment.js"></script>
 		<script type="text/javascript" src="game.js"></script>
 
+		<script type="text/javascript" src="breakout/util.js"></script>
 		<script type="text/javascript" src="breakout/header.js"></script>
+		<script type="text/javascript" Src="breakout/bricks.js"></script>
 		<script type="text/javascript" src="breakout/paddle.js"></script>
 		<script type="text/javascript" src="breakout/ball.js"></script>
 		<script type="text/javascript" src="breakout/breakout.js"></script>
