--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
 		<canvas id="canvas" width="800" height="800" style="border: 1px solid black">
 			Your browser doesn't support canvas.
 		</canvas>
+		<div id="info"></div>
 	</body>
 </html>
