powerbar with locking groups to dynamically control how much power is gained.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="game.js"></script>
 
 		<script type="text/javascript" src="breakout/util.js"></script>
+		<script type="text/javascript" src="breakout/powerbar.js"></script>
 		<script type="text/javascript" src="breakout/header.js"></script>
 		<script type="text/javascript" Src="breakout/bricks.js"></script>
 		<script type="text/javascript" src="breakout/paddle.js"></script>
