--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
 		<script type="text/javascript" src="breakout/util.js"></script>
 		<script type="text/javascript" src="breakout/powerbar.js"></script>
+		<script type="text/javascript" src="breakout/powerselector.js"></script>
 		<script type="text/javascript" src="breakout/header.js"></script>
 		<script type="text/javascript" Src="breakout/bricks.js"></script>
 		<script type="text/javascript" src="breakout/paddle.js"></script>
