--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" Src="breakout/bricks.js"></script>
 		<script type="text/javascript" src="breakout/paddle.js"></script>
 		<script type="text/javascript" src="breakout/ball.js"></script>
+		<script type="text/javascript" src="breakout/debug.js"></script>
 		<script type="text/javascript" src="breakout/panel.js"></script>
 		<script type="text/javascript" src="breakout/breakout.js"></script>
 		
@@ -27,5 +28,6 @@
 		<canvas id="panel" width="200" height="850">
 			Your brower doesn't support canvas.
 		</canvas>
+		<div id="info"></div>
 	</body>
 </html>
