breakout, now with sound

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,37 @@
 		<canvas id="panel" width="200" height="850">
 			Your brower doesn't support canvas.
 		</canvas>
-		<div id="info"></div>
+
+		<audio id="blip1">
+			<source src="audio/blip1.wav" type="audio/wav">
+		</audio>
+
+		<audio id="blip2">
+			<source src="audio/blip2.wav" type="audio/wav">
+		</audio>
+		
+		<audio id="blip3">
+			<source src="audio/blip3.wav" type="audio/wav">
+		</audio>
+
+		<audio id="blip1">
+			<source src="audio/blip3.wav" type="audio/wav">
+		</audio>
+
+		<audio id="deathray">
+			<source src="audio/deathray.wav" type="audio/wav">
+		</audio>
+
+		<audio id="ubermode">
+			<source src="audio/ubermode.wav" type="audio/wav">
+		</audio>
+
+		<audio id="slowtime">
+			<source src="audio/slowtime.wav" type="audio/wav">
+		</audio>
+
+		<audio id="gameover">
+			<source src="audio/gameover.wav" type="audio/wav">
+		</audio>
 	</body>
 </html>
